Minor update variabel & struct name
